# EZMonitorModeButton

./: .gitignore  README.md  build_deb.sh  ezmonitormode.desktop  ezmonitormode_1.0_all.deb  ezmonitormode_1.1.0_all.deb  ezmonitormode_1.1_all.deb  install.sh  monitor_gui.py  pyproject.toml  test_monitor_gui.py
.github/workflows/: python-app.yml  python-publish.yml
ezmonitormode_1.0_all/DEBIAN/: control
ezmonitormode_1.0_all/usr/share/ezmonitormode/: monitor_gui.py  monitor_mode.sh
ezmonitormode_1.1.0_all/DEBIAN/: control
ezmonitormode_1.1.0_all/usr/share/applications/: ezmonitormode.desktop
ezmonitormode_1.1.0_all/usr/share/ezmonitormode/: monitor_gui.py  monitor_mode.sh  stop_monitor_mode.sh
ezmonitormode_1.1_all/DEBIAN/: control
ezmonitormode_1.1_all/usr/share/applications/: ezmonitormode.desktop
ezmonitormode_1.1_all/usr/share/ezmonitormode/: monitor_gui.py  stop_monitor_mode.sh
src/ezmonitormode/: monitor_gui.py  stop_monitor_mode.sh
tests/: test_monitor_gui.py
