[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezmonitormode"
version = "1.1.0"
authors = [
  { name="ldl805" },
]
description = "A simple GUI to enable/disable monitor mode on wireless interfaces."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = []

[project.scripts]
ezmonitormode = "ezmonitormode.monitor_gui:main"

[project.urls]
"Homepage" = "https://github.com/ldl805/EZMonitorModeButton"
"Bug Tracker" = "https://github.com/ldl805/EZMonitorModeButton/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmonitormode"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/ezmonitormode/*.sh",
    "/src/ezmonitormode/*.py",
]
